syntax = "proto3";

package ru.otus.numbers;

service NumberGenerator {
  rpc GenerateNumbers(NumberRequest) returns (stream NumberResponse) {}
}

message NumberRequest {
  int32 firstValue = 1;
  int32 lastValue = 2;
}

message NumberResponse {
  int32 number = 1;
}